# akk2eng

./: .cursorrules  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: akk2eng-m01c-submission.ipynb  akk2eng.md  moonshot.md
docs/kaggledocs/: datasetdescription.md  rules.md
docs/milestones/M00/: M00_audit.md  M00_plan.md  M00_run1.md  M00_summary.md  M00_toolcalls.md
docs/milestones/M01/: M01B_plan.md  M01B_toolcalls.md  M01C_checklist.md  M01_audit.md  M01_plan.md  M01_run1.md  M01_run2.md  M01_run3.md  M01_summary.md  M01_toolcalls.md
docs/milestones/M02/: M02_audit.md  M02_plan.md  M02_run1_m02c_decoding.md  M02_run2_kaggle.md  M02_run2_local_refinement.md  M02_run3_local_beam.md  M02_run4_lexicon.md  M02_summary.md  M02_toolcalls.md
docs/milestones/M03/: M03_audit.md  M03_plan.md  M03_run1_normalization.md  M03_run2_conservative_norm.md  M03_summary.md  M03_toolcalls.md
docs/milestones/M04/: M04_audit.md  M04_plan.md  M04_run1_baseline_and_data_audit.md  M04_run2_alignment_builder.md  M04_run3_training_eval.md  M04_summary.md  M04_toolcalls.md
docs/milestones/M05/: M05_audit.md  M05_local_gpu_execution.md  M05_plan.md  M05_run1_augmentation_builder.md  M05_run2_training_eval.md  M05_summary.md  M05_toolcalls.md
docs/milestones/M06/: M06_audit.md  M06_local_gpu_execution.md  M06_plan.md  M06_run1_policy_builder.md  M06_run2_training_eval.md  M06_run3_kaggle_submit.md  M06_summary.md  M06_toolcalls.md
docs/milestones/M07/: M07_audit.md  M07_local_gpu_execution.md  M07_plan.md  M07_run1_confidence_builder.md  (+3 more)
kaggle/: akk2eng_m00_submission.ipynb  akk2eng_m01_submission.ipynb
src/akk2eng/: __init__.py  config.py  run_local.py
tests/: test_checkpoint_hash.py  test_lexicon_postprocess.py  test_m02_analyze_errors.py  test_m02_splits_and_metrics.py  test_m03_normalize.py  test_m04_alignment.py  test_m04_mixed_train.py  test_m04_split_leakage.py  test_m05_augmentation.py  test_m06_selection.py  test_m07_confidence.py  test_m08_alignment_quality.py  test_sanity.py
tests/fixtures/: tiny_train.csv
(+97 files in other folders)
