[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "akk2eng"
version = "0.0.1"
description = "Akkadian → English machine translation — Deep Past Initiative (Kaggle code competition)."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.26.0,<2",
    "pandas>=2.0",
    # torch >=2.4 (no upper bound): CI gets stable CPU wheel from PyPI; Blackwell (sm_120)
    # workstations install torch 2.10+cu128 locally (see README.md).
    "torch>=2.4.0",
    "transformers>=4.45.0,<4.48.0",
    "datasets>=2.18.0,<4",
    "accelerate>=0.26.0,<2",
    "sentencepiece>=0.2.0",
    # M02: dev-loop metrics (chrF primary, BLEU secondary); not competition metric.
    "sacrebleu>=2.4.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.3",
]
# Official Kaggle API CLI (`kaggle competitions download`, etc.)
kaggle = [
    "kaggle>=1.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
